Added most recent work experience.

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -54,9 +54,10 @@
                                 </div>
                                 <div class="row flex-fill">
                                     <p style="font-size: 0.875em">
-                                        Engineer with 6+ years of experience in software development and electrical design.
-                                        Experienced in all phases of the Agile software development lifecycle, as well as commisioning live controls systems and on-site troubleshooting.
-                                        Seeking a position to grow my software skills, while utilizing my knowledge of hardware and electrical engineering fundamentals.
+                                        Engineer with 8+ years of experience in software development for
+                                        various industries. Looking for a role to continue growing my skills.
+                                        Experienced in all phases of the Agile software development lifecycle
+                                        supported by unit testing and Continuous Integration.
                                     </p>
                                 </div>
                                 <p></p>
@@ -68,8 +69,54 @@
                                         <mark>automation</mark> <mark>aerospace</mark> <mark>robotics</mark> <mark>microcontrollers</mark>
                                     </p>
                                     <p style="text-align: center; font-size: 0.875em;">
-                                        <mark>r&d</mark> <mark>ROS</mark>  <mark>human machine interaction</mark>
+                                        <mark>r&d</mark> <mark>ROS</mark>  <mark>product development</mark>
                                     </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row justify-content-center mt-5">
+        <div class="parallax-bg rounded" style="--url: url({% static 'img/F35.jpg' %}); max-width: 80%; border-radius: 5px;">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="card mt-5 mb-5 p-2" style="height: 400px; width:700px; border-radius: 5px;">
+                        <div class="row flex-fill">
+                            <div class="col-4 col-border align-self-center">
+                                <img src="{%static 'img/raytheon.png' %}" class="img-fluid">
+                            </div>
+                            <div class="col-8 align-self-center">
+                                <div class="card-body">
+                                    <h5 class="card-title">Sr. Software Engineer</h5>
+                                    <p class="card-text"><b>2021-2022</b></p>
+                                    <br>
+                                    <p class="card-text">
+                                        Developed and maintained several applications for aircraft sensor functionality based on a Protobuf and OMS messaging service.
+                                    </p>
+                                    <br>
+                                    <p class="card-text">
+                                        <b>Skills Used:</b>
+                                    </p>
+                                    <div class="row flex-fill">
+                                        <div class="col-6">
+                                            <ul>
+                                                <li>C++</li>
+                                                <li>Python</li>
+                                                <li>Docker</li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-6">
+                                            <ul>
+                                                <li>RedHat Linux</li>
+                                                <li>Protobuf</li>
+                                                <li>OMS</li>
+                                            </ul>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
