corrected case of some file extensions causing issues on linux dyno that is case sensitive.

--- a/projects/templates/projects/esl.html
+++ b/projects/templates/projects/esl.html
@@ -124,7 +124,7 @@
         </div>
       </div>
       <div class="card mt-4">
-        <video src="{%static 'vid/esl_prototype_demo.mp4' %}" controls></video>
+        <video src="{%static 'vid/esl_prototype_demo.MP4' %}" controls></video>
         <div class="card-body">
           <p class="card-text">Working second prototype.</p>
         </div>
@@ -144,7 +144,7 @@
         </div>
       </div>
       <div class="card mt-4">
-        <video src="{%static 'vid/esl_final_demo.mp4' %}" controls></video>
+        <video src="{%static 'vid/esl_final_demo.MP4' %}" controls></video>
         <div class="card-body">
           <p class="card-text">Working final model. (Ignore the sock please.)</p>
         </div>
