Started on Personal Portfolio page.

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -61,7 +61,7 @@
                             Projects
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a href="#" class="dropdown-item">Personal Portfolio</a></li>
+                            <li><a href="{% url 'personal_portfolio' %}" class="dropdown-item">Personal Portfolio</a></li>
                             <li><a href="{% url 'esl' %}" class="dropdown-item">Electrostatic Loudspeaker</a></li>
                             <li><a href="#" class="dropdown-item">Impact Sensor</a></li>
                             <li><a href="#" class="dropdown-item">Reaction Monitor</a></li>
