--- a/projects/templates/projects/personal_portfolio.html
+++ b/projects/templates/projects/personal_portfolio.html
@@ -68,7 +68,7 @@
 
                 Once it looked pretty enough, I wanted to have it hosted on the web and came across <b>Heroku</b>, which is an affordable <b>Cloud Platform as a Service (PaaS)</b> owned by Salesforce
                 with a lot of support specifically for Python and Django. Essentially, Heroku hosts and manages <b>UNIX containers</b> that are running <b>gunicorn HTTP servers</b>
-                for Python web apps like mine. Heroku refers to these containers as <b>dynos</b>. Heroku also has very convenient <b>Continuous Integration (CI)</b> set up with <b>GitHub</b>
+                for Python web apps like mine. Heroku refers to these containers as <b>dynos</b>. Heroku also has very convenient integration set up with <b>GitHub</b>
                 so that I can easily deploy my application to the server after committing changes.<br><br>
 
                 As I grew the website, I had an increasing amount of media like images and videos I wanted to post to the website. So I also set up <b>WhiteNoise</b> which is a Python library
