--- a/projects/templates/projects/personal_portfolio.html
+++ b/projects/templates/projects/personal_portfolio.html
@@ -63,7 +63,7 @@
                 and it is actually more like the Controller. The View is responsible for receiving user input and responding with the correct response. Much of what was done with Controllers
                 in MVC is done already in the MVT framework itself. Lastly, the Template is responsible for rendering the data passed from the View in the form of an <b>HTML</b> web page.<br><br>
 
-                After making an initial and very basic webpage, I realized the website was pretty ugly. So, I researched what <b>CSS</b> frameworks that other big websites using Django used and
+                After making an initial and very basic webpage, I realized the website was pretty ugly. So, I researched what <b>CSS</b> frameworks other Django-based websites used and
                 <b>Bootstrap</b> came up often. So I chose that, and it is what has allowed me to make the UI more bearable.<br><br>
 
                 Once it looked pretty enough, I wanted to have it hosted on the web and came across <b>Heroku</b>, which is an affordable <b>Cloud Platform as a Service (PaaS)</b> owned by Salesforce
