Changed verbage pt3

--- a/projects/templates/projects/personal_portfolio.html
+++ b/projects/templates/projects/personal_portfolio.html
@@ -42,7 +42,7 @@
 
                 Since most of my career I've worked on pre-existing projects, I started this to gain full experience from the beginning to the end of a project.
                 I also started this as a way to learn more about <b>Web Development</b>, <b>Source Control</b>, <b>Continuous Integration</b>, and <b>Cloud Platforms</b> in general.
-                This website was not created using any template or generation, it was all coded by me. Both <b>front and back end</b>, starting with nothing.<br><br>
+                This website was not created using any drag and drop or generation tools, it was all coded by me. Both <b>front and back end</b>, starting with nothing.<br><br>
 
                 My current plan is to use this to showcase the experience I have gained throughout my career, as well as other personal projects I work on. However, I have no strict plans
                 to keep it that way and may post other random stuff here as well. The end goal of this project is to have a place that I can grow and display my coding skills with what ever
@@ -64,7 +64,8 @@
                 in MVC is done already in the MVT framework itself. Lastly, the Template is responsible for rendering the data passed from the View in the form of an <b>HTML</b> web page.<br><br>
 
                 After making an initial and very basic webpage, I realized the website was pretty ugly. So, I researched what <b>CSS</b> frameworks other Django-based websites used and
-                <b>Bootstrap</b> came up often. So I chose that, and it is what has allowed me to make the UI more bearable.<br><br>
+                <b>Bootstrap</b> came up often. So I chose that, and it is what has allowed me to make the UI more bearable.<br><br> It provides me with the nice pre-defined templates
+                for things like the cards and navigation bar.
 
                 Once it looked pretty enough, I wanted to have it hosted on the web and came across <b>Heroku</b>, which is an affordable <b>Cloud Platform as a Service (PaaS)</b> owned by Salesforce
                 with a lot of support specifically for Python and Django. Essentially, Heroku hosts and manages <b>UNIX containers</b> that are running <b>gunicorn HTTP servers</b>
