Creating page to hold chess app.

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -83,6 +83,9 @@
                 </ul>
             </div>
             <button type="submit" class="btn btn-primary">
+                <a href="{% url 'chess_game' %}" style="color:white; text-decoration:none;">Play Chess with me</a>
+            </button>
+            <button type="submit" class="btn btn-primary ms-3">
                 <a href="mailto:preston@pdani.online" style="color:white; text-decoration:none;">Hire me</a>
             </button>
         </div>
